# oksanaranepa

./: .gitignore  README.md  banking_rag_colab.ipynb  pyproject.toml
configs/nemo/: actions.py  config.yml  rails.co
data/: bank_documents.json  eval_questions.json  knowledge_base.txt
src/bank_rag/: __init__.py  chunking.py  cli.py  documents.py  embeddings.py  evaluation.py  indexing.py  llm.py  pipeline.py  retrieval.py  vector_store.py
src/guardrails_chatbot/: __init__.py  cli.py  fact_validator.py  guardrails.py  model.py  pii.py  toxicity.py
tests/: test_bank_rag.py  test_fact_validator.py  test_guardrails.py  test_pii.py
